feat : TDD - 크루 제적 상태 계산 기능 green test